test/compile-fail/boost_no_pfr_macro.cpp
// Copyright (c) 2022 Denis Mikhailov
//
// Distributed under the Boost Software License, Version 1.0. (See accompanying
// file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

#define BOOST_NO_PFR 1
#include <boost/pfr/core.hpp>

int main() { }

